--- a/public/styles.css
+++ b/public/styles.css
@@ -2,11 +2,17 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     color: #333;
-    padding: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+    padding-top: 50px;
+}
+
+.content {
+    text-align: center;
+    width: 80%;
+    margin: auto;
 }
 
 h1 {
@@ -14,22 +20,27 @@ h1 {
 }
 
 form {
-    margin-bottom: 20px;
+    display: inline-block;
 }
 
-form {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 20px;
+.file-upload {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
 }
 
-form > *:not(:last-child) {
-	margin-bottom: 10px;
+#file-name {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px 10px;
+    background-color: #f0f0f0;
+    flex-grow: 1;
+    text-align: center;
 }
 
-input[type="file"] {
-    margin-bottom: 10px;
+.checkbox {
+    margin-top: 10px;
 }
 
 input[type="submit"] {
@@ -39,19 +50,20 @@ input[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
 }
 
 input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
-input[type="checkbox"] {
-    margin-top: 10px;
-}
-
-#result {
+#result-box {
+    border: 1px solid #ccc;
+    padding: 10px;
     margin-top: 20px;
+    min-height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #result img {
@@ -60,10 +72,9 @@ input[type="checkbox"] {
 
 input[type="file"] {
 	display: none;
-  }
+}
   
-  /* Style the custom file input button */
-  .file-input {
+.file-input {
 	display: inline-block;
 	padding: 10px 20px;
 	background-color: #337ab7;
@@ -71,4 +82,20 @@ input[type="file"] {
 	cursor: pointer;
 	border: none;
 	border-radius: 4px;
-  }
+}
+
+#loading-spinner {
+    display: none;
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
