--- a/public/styles.css
+++ b/public/styles.css
@@ -73,6 +73,17 @@ input[type="submit"]:hover {
 input[type="file"] {
 	display: none;
 }
+
+#button {
+    margin-top: 20px;
+    width: 100px;
+    height: 40px;
+    background-color: #008000;
+    color: #fff;
+	cursor: pointer;
+	border: none;
+	border-radius: 4px;
+}
   
 .file-input {
 	display: inline-block;
